# small-projects

./: .gitignore
bounce-square/: index.html  script.js  style.css
pygame-snake/: main.py
quiz-game/: QuizGame.sln  QuizGame.vcxproj  Source.cpp
raycasting-console/: README.md  RayCasting.sln
raycasting-console/RayCasting/: RayCasting.vcxproj  RayCasting.vcxproj.filters
raycasting-console/RayCasting/include/: Camera.h  FPPOV.h  Map.h  Utils.h  olcConsoleGameEngineOOP.h
raycasting-console/RayCasting/src/: FPPOV.cpp  Map.cpp  main.cpp  olcConsoleGameEngineOOP.cpp
rock-paper-scissor/: main.cpp  rock_paper_scissor_game.sln  rock_paper_scissor_game.vcxproj
sfml-snake/: CMakeLists.txt  SFML-Snake.sln
sfml-snake/SFML-Snake/: SFML-Snake.vcxproj  SFML-Snake.vcxproj.filters
sfml-snake/SFML-Snake/src/: Food.cpp  Food.hpp  Game.cpp  Game.hpp  Object.hpp  Snake.cpp  Snake.hpp  Utilities.hpp  main.cpp
sfml-tetris/: Tetris.sln
sfml-tetris/Tetris/: Tetris.vcxproj  Tetris.vcxproj.filters
sfml-tetris/Tetris/include/: Blocks.h
sfml-tetris/Tetris/src/: Blocks.cpp  main.cpp
tetris-console/: README.md
tetris-console/TetrisConsole/: TetrisConsole.vcxproj  TetrisConsole.vcxproj.filters
tetris-console/TetrisConsole/include/: Field.h  Object.h  Stats.h  Tetromino.h  TinField.h  TinQueue.h
tetris-console/TetrisConsole/src/: main.cpp
